Finishing Simple Restful API Format
