# cointrum-mainapi/src/services/creationhub/routes.ts
@@ -1,16 +1,16 @@
 import { Request, Response } from "express";
 // import { getPlacesByName } from "./SearchController";
-import { checkSearchParams } from "../../middleware/checks";
+import { checkCreationHubParams } from "../../middleware/checks";
 
 export default [
   {
     path: "/api/v1/creationhub/gettradingmaps",
-    method: "post",
+    method: "get",
     handler: [
-      checkSearchParams,
+      checkCreationHubParams,
       async ({ query }: Request, res: Response) => {
         //const result = await getPlacesByName(query.q);
-        res.status(200).send({});
+        res.status(200).send("testubg gaga");
       }
     ]
   },
@@ -18,7 +18,7 @@ export default [
     path: "/api/v1/creationhub/createtradingmap",
     method: "post",
     handler: [
-      checkSearchParams,
+      checkCreationHubParams,
       async ({ query }: Request, res: Response) => {
         //const result = await getPlacesByName(query.q);
         res.status(200).send({});
@@ -29,7 +29,18 @@ export default [
     path: "/api/v1/creationhub/edittradingmap",
     method: "post",
     handler: [
-      checkSearchParams,
+      checkCreationHubParams,
+      async ({ query }: Request, res: Response) => {
+        //const result = await getPlacesByName(query.q);
+        res.status(200).send({});
+      }
+    ]
+  },
+  {
+    path: "/api/v1/creationhub/removetradingmap",
+    method: "post",
+    handler: [
+      checkCreationHubParams,
       async ({ query }: Request, res: Response) => {
         //const result = await getPlacesByName(query.q);
         res.status(200).send({});
